@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.  The ASF licenses this file to you under the Apache License, Version
  * 2.0 (the "License"); you may not use this file except in compliance with the License.  You may obtain a copy of the License at
@@ -22,8 +22,8 @@ import org.apache.storm.state.KeyValueState;
 import org.apache.storm.task.OutputCollector;
 import org.apache.storm.task.TopologyContext;
 import org.apache.storm.tuple.Tuple;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import static org.apache.storm.spout.CheckPointState.Action.COMMIT;
@@ -43,11 +43,11 @@ public class StatefulBoltExecutorTest {
     private TopologyContext mockTopologyContext;
     private Tuple mockTuple;
     private Tuple mockCheckpointTuple;
-    private Map<String, Object> mockStormConf = new HashMap<>();
+    private final Map<String, Object> mockStormConf = new HashMap<>();
     private OutputCollector mockOutputCollector;
     private KeyValueState<String, String> mockState;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
         mockBolt = Mockito.mock(IStatefulBolt.class);
         executor = new StatefulBoltExecutor<>(mockBolt);
@@ -66,19 +66,19 @@ public class StatefulBoltExecutorTest {
     }
 
     @Test
-    public void testHandleTupleBeforeInit() throws Exception {
+    public void testHandleTupleBeforeInit() {
         Mockito.when(mockTuple.getSourceStreamId()).thenReturn("default");
         executor.execute(mockTuple);
         Mockito.verify(mockBolt, Mockito.times(0)).execute(Mockito.any(Tuple.class));
     }
 
     @Test
-    public void testHandleTuple() throws Exception {
+    public void testHandleTuple() {
         Mockito.when(mockTuple.getSourceStreamId()).thenReturn("default");
         executor.execute(mockTuple);
         Mockito.when(mockCheckpointTuple.getSourceStreamId()).thenReturn(CheckpointSpout.CHECKPOINT_STREAM_ID);
         Mockito.when(mockCheckpointTuple.getValueByField(CHECKPOINT_FIELD_ACTION)).thenReturn(INITSTATE);
-        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(new Long(0));
+        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(Long.valueOf(0));
         Mockito.doNothing().when(mockOutputCollector).ack(mockCheckpointTuple);
         executor.execute(mockCheckpointTuple);
         Mockito.verify(mockBolt, Mockito.times(1)).execute(mockTuple);
@@ -86,81 +86,81 @@ public class StatefulBoltExecutorTest {
     }
 
     @Test
-    public void testRollback() throws Exception {
+    public void testRollback() {
         Mockito.when(mockTuple.getSourceStreamId()).thenReturn("default");
         executor.execute(mockTuple);
         Mockito.when(mockCheckpointTuple.getSourceStreamId()).thenReturn(CheckpointSpout.CHECKPOINT_STREAM_ID);
         Mockito.when(mockCheckpointTuple.getValueByField(CHECKPOINT_FIELD_ACTION)).thenReturn(ROLLBACK);
-        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(new Long(0));
+        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(Long.valueOf(0));
         Mockito.doNothing().when(mockOutputCollector).ack(mockCheckpointTuple);
         executor.execute(mockCheckpointTuple);
         Mockito.verify(mockState, Mockito.times(1)).rollback();
     }
 
     @Test
-    public void testCommit() throws Exception {
+    public void testCommit() {
         Mockito.when(mockTuple.getSourceStreamId()).thenReturn("default");
         executor.execute(mockTuple);
         Mockito.when(mockCheckpointTuple.getSourceStreamId()).thenReturn(CheckpointSpout.CHECKPOINT_STREAM_ID);
         Mockito.when(mockCheckpointTuple.getValueByField(CHECKPOINT_FIELD_ACTION)).thenReturn(COMMIT);
-        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(new Long(0));
+        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(Long.valueOf(0));
         Mockito.doNothing().when(mockOutputCollector).ack(mockCheckpointTuple);
         executor.execute(mockCheckpointTuple);
-        Mockito.verify(mockBolt, Mockito.times(1)).preCommit(new Long(0));
-        Mockito.verify(mockState, Mockito.times(1)).commit(new Long(0));
+        Mockito.verify(mockBolt, Mockito.times(1)).preCommit(0L);
+        Mockito.verify(mockState, Mockito.times(1)).commit(0L);
     }
 
     @Test
-    public void testPrepareAndRollbackBeforeInitstate() throws Exception {
+    public void testPrepareAndRollbackBeforeInitstate() {
         Mockito.when(mockTuple.getSourceStreamId()).thenReturn("default");
         executor.execute(mockTuple);
         Mockito.when(mockCheckpointTuple.getSourceStreamId()).thenReturn(CheckpointSpout.CHECKPOINT_STREAM_ID);
         Mockito.when(mockCheckpointTuple.getValueByField(CHECKPOINT_FIELD_ACTION)).thenReturn(PREPARE);
-        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(new Long(100));
+        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(Long.valueOf(100));
         executor.execute(mockCheckpointTuple);
         Mockito.verify(mockOutputCollector, Mockito.times(1)).fail(mockCheckpointTuple);
 
         Mockito.when(mockCheckpointTuple.getValueByField(CHECKPOINT_FIELD_ACTION)).thenReturn(ROLLBACK);
-        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(new Long(100));
+        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(Long.valueOf(100));
         Mockito.doNothing().when(mockOutputCollector).ack(mockCheckpointTuple);
         executor.execute(mockCheckpointTuple);
         Mockito.verify(mockState, Mockito.times(1)).rollback();
     }
 
     @Test
-    public void testCommitBeforeInitstate() throws Exception {
+    public void testCommitBeforeInitstate() {
         Mockito.when(mockTuple.getSourceStreamId()).thenReturn("default");
         Mockito.when(mockCheckpointTuple.getSourceStreamId()).thenReturn(CheckpointSpout.CHECKPOINT_STREAM_ID);
         Mockito.when(mockCheckpointTuple.getValueByField(CHECKPOINT_FIELD_ACTION)).thenReturn(COMMIT);
-        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(new Long(100));
+        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(Long.valueOf(100));
         executor.execute(mockCheckpointTuple);
         Mockito.verify(mockOutputCollector, Mockito.times(1)).ack(mockCheckpointTuple);
 
         Mockito.when(mockCheckpointTuple.getValueByField(CHECKPOINT_FIELD_ACTION)).thenReturn(ROLLBACK);
-        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(new Long(100));
+        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(Long.valueOf(100));
         executor.execute(mockCheckpointTuple);
         Mockito.verify(mockState, Mockito.times(1)).rollback();
     }
 
     @Test
-    public void testPrepareAndCommit() throws Exception {
+    public void testPrepareAndCommit() {
         Mockito.when(mockTuple.getSourceStreamId()).thenReturn("default");
         Mockito.when(mockCheckpointTuple.getSourceStreamId()).thenReturn(CheckpointSpout.CHECKPOINT_STREAM_ID);
         Mockito.when(mockCheckpointTuple.getValueByField(CHECKPOINT_FIELD_ACTION)).thenReturn(INITSTATE);
-        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(new Long(0));
+        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(Long.valueOf(0));
         executor.execute(mockCheckpointTuple);
 
         executor.execute(mockTuple);
         Mockito.when(mockCheckpointTuple.getSourceStreamId()).thenReturn(CheckpointSpout.CHECKPOINT_STREAM_ID);
         Mockito.when(mockCheckpointTuple.getValueByField(CHECKPOINT_FIELD_ACTION)).thenReturn(PREPARE);
-        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(new Long(100));
+        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(Long.valueOf(100));
         executor.execute(mockCheckpointTuple);
         executor.execute(mockTuple);
         Mockito.when(mockCheckpointTuple.getValueByField(CHECKPOINT_FIELD_ACTION)).thenReturn(COMMIT);
-        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(new Long(100));
+        Mockito.when(mockCheckpointTuple.getLongByField(CHECKPOINT_FIELD_TXID)).thenReturn(Long.valueOf(100));
         executor.execute(mockCheckpointTuple);
         mockOutputCollector.ack(mockTuple);
-        Mockito.verify(mockState, Mockito.times(1)).commit(new Long(100));
+        Mockito.verify(mockState, Mockito.times(1)).commit(100L);
         Mockito.verify(mockBolt, Mockito.times(2)).execute(mockTuple);
         Mockito.verify(mockOutputCollector, Mockito.times(1)).ack(mockTuple);
     }
